fix(CSS): z-index of blocks as overlay

--- a/src/css/dumbymap.css
+++ b/src/css/dumbymap.css
@@ -139,6 +139,7 @@
   .SemanticHtml {
     font-size: 12px;
     pointer-events: none;
+    z-index: 1;
 
     > .draggable-block {
       box-sizing: content-box;
